# localization

./: .gitignore  .travis.yml  LICENSE.md  README.md
correction_net/: CMakeLists.txt  package.xml
correction_net/launch/: correction.launch
correction_net/scripts/: CorrectionNet.h5  CorrectionNet.json  Laser.py  Train_CorrectionNetCNN.py  correction_net.py  correction_net_train.py  main.py
recording_tools/: CMakeLists.txt  map.txt  package.xml
recording_tools/config/: config.rviz
recording_tools/include/recording_tools/: conversions.h  get_data.h  mapper_viz.h  viz_data.h
recording_tools/launch/: mapper.launch  viz.launch
recording_tools/map/: mapfile_rennes.yaml
recording_tools/scripts/: 1_test_laser_scans_from_ros_vs_generated.py  2_create_odometry.py  3_test_odometry_check.py  4_generate_laser_from_odom.py  5_check_pylaser_vs_laser.py  Laser.py  laser.pyx  setup.py
recording_tools/src/: get_data.cpp  mapper_viz.cpp  viz_data.cpp
scan_matcher/: CMakeLists.txt  package.xml
scan_matcher/scripts/: ScanMatchin.h5  ScanMatchin.json  scan_matcher.py  scan_matcher_train.py
simulator/: CMakeLists.txt  package.xml
simulator/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner.yaml
simulator/include/simulator/: collidechecker.h  laser.h  laser_cast.h  laser_cast_online.h  map_2d.hpp  map_tools.h  simulation.h  simulation_wrapper.h  vector_2d.hpp  vector_2d.hxx
simulator/launch/: laser_cast.launch  map_server.launch  mb.launch  mbA.launch  mbDWA.launch  mbTEB.launch  simRviz.launch  simulator.launch
simulator/map/: mapfile.yaml
simulator/rviz/: local_rviz.rviz  nav_sim.rviz
simulator/src/: collidechecker.cpp  laser.cpp  laser_cast.cpp  laser_cast_online.cpp  simulation.cpp  simulation_app.cpp  simulation_wrapper.cpp
